force-app/main/default/objects/Send_Out_Detail__c/Send_Out_Detail__c.object-meta.xml
<CustomObject>
    <description>Use for tracking resumes details sent out, associated to a &quot;Position&quot; record</description>
    <label>Send Out Detail</label>
    <nameField>
        <displayFormat>RESUME-{0000}</displayFormat>
        <label>Resume Detail ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Send Out Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>