force-app/main/default/objects/Send_Out_Detail__c/fields/Access_Strat_Send_Out_ID__c.field-meta.xml
<CustomField>
    <fullName>Access_Strat_Send_Out_ID__c</fullName>
    <label>Access Strat Send Out ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>