force-app/main/default/objects/Send_Out_Detail__c/fields/ClientID_DataMigration__c.field-meta.xml
<CustomField>
    <fullName>ClientID_DataMigration__c</fullName>
    <label>ClientID DataMigration</label>
    <length>10</length>
    <type>Text</type>
</CustomField>