force-app/main/default/objects/Send_Out_Detail__c/fields/Date_of_1st_Interview__c.field-meta.xml
<CustomField>
    <fullName>Date_of_1st_Interview__c</fullName>
    <label>Date of 1st Interview</label>
    <type>Date</type>
</CustomField>