force-app/main/default/objects/Send_Out_Detail__c/fields/Date_of_Most_Recent_Interview__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Most_Recent_Interview__c</fullName>
    <formula>datevalue(if (  ISBLANK(Date_of_Advanced_Interview__c) , if (ISBLANK(Date_of_1st_Interview__c), &quot;&quot;, text(Date_of_1st_Interview__c)), text(Date_of_Advanced_Interview__c)))</formula>
    <label>Date of Most Recent Interview</label>
    <type>Date</type>
</CustomField>