force-app/main/default/objects/Send_Out_Detail__c/fields/Date_of_No_Placement__c.field-meta.xml
<CustomField>
    <fullName>Date_of_No_Placement__c</fullName>
    <label>Date of No Placement</label>
    <type>Date</type>
</CustomField>