force-app/main/default/objects/Send_Out_Detail__c/fields/Date_of_Offer_Made__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Offer_Made__c</fullName>
    <label>Date of Offer Made</label>
    <type>Date</type>
</CustomField>