force-app/main/default/objects/Send_Out_Detail__c/fields/Date_of_Send_Out_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Send_Out_Sent__c</fullName>
    <label>Date of Send Out Sent</label>
    <type>Date</type>
</CustomField>