force-app/main/default/objects/Send_Out_Detail__c/fields/Job_Order__c.field-meta.xml
<CustomField>
    <fullName>Job_Order__c</fullName>
    <label>Job Order</label>
    <referenceTo>Job_Order__c</referenceTo>
    <relationshipLabel>Send Outs Before 9/1/14</relationshipLabel>
    <relationshipName>Send_Out_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>