force-app/main/default/objects/Send_Out_Detail__c/fields/Lapsed_Days_to_First_Interview__c.field-meta.xml
<CustomField>
    <fullName>Lapsed_Days_to_First_Interview__c</fullName>
    <formula>VALUE( IF( ISNULL( Date_of_1st_Interview__c ) ,  &quot;&quot;,  TEXT( Date_of_1st_Interview__c -  Date_of_Send_Out_Sent__c ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lapsed Days to First Interview</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>