force-app/main/default/objects/Send_Out_Detail__c/fields/Legacy_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Opportunity_ID__c</fullName>
    <inlineHelpText>Salesforce ID of Opportunity that Send Out Detail was associated with before Studentforce launch in Sep&apos;14.</inlineHelpText>
    <label>Legacy Opportunity ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>