force-app/main/default/objects/Send_Out_Detail__c/fields/Most_Recent_Interview_Count__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Interview_Count__c</fullName>
    <description>Send Out Details were used exclusively for the recording of Send Outs and subsequent interviews and placements. Therefore, any Send Out Detail with a Date of Placement should be included in Most Recent Interview Count.</description>
    <formula>if (not (isblank (Date_of_Most_Recent_Interview__c)), 1, 

if (not (isblank (Date_of_Placement__c)), 1,

0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Most Recent Interview Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>