force-app/main/default/objects/Send_Out_Detail__c/fields/Organization_Copy__c.field-meta.xml
<CustomField>
    <fullName>Organization_Copy__c</fullName>
    <description>.</description>
    <formula>Job_Order__r.Organization__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organization</label>
    <type>Text</type>
</CustomField>