force-app/main/default/objects/Send_Out_Detail__c/fields/Placement_Count__c.field-meta.xml
<CustomField>
    <fullName>Placement_Count__c</fullName>
    <formula>if (not (isblank ( Date_of_Placement__c )), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Placement Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>