force-app/main/default/objects/Send_Out_Detail__c/fields/Reason_for_Non_Placement__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Non_Placement__c</fullName>
    <label>Reason for Non Placement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Found Other Candidate</fullName>
            </value>
            <value>
                <fullName>Poor Interview</fullName>
            </value>
            <value>
                <fullName>Position Deferred</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>