force-app/main/default/objects/Send_Out_Detail__c/fields/Send_Out_Count__c.field-meta.xml
<CustomField>
    <fullName>Send_Out_Count__c</fullName>
    <description>Send Out Details were used exclusively for the recording of Send Outs and subsequent interviews and placements. Therefore, every record is included in Send Out Count.</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send Out Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>