force-app/main/default/objects/Send_Out_Detail__c/fields/Send_Out_Name__c.field-meta.xml
<CustomField>
    <fullName>Send_Out_Name__c</fullName>
    <formula>HYPERLINK(&quot;https://na15.salesforce.com/&quot;&amp;Id,    Job_Order__r.Name  &amp; &quot; - &quot; &amp;  text(month(   Job_Order__r.Open_Date__c   )) &amp; &quot;/&quot; &amp; text(day(  Job_Order__r.Close_Date__c  )) &amp; &quot;/&quot; &amp; text(year( Job_Order__r.Open_Date__c )) &amp; &quot; - &quot; &amp; Student__r.Last_Name__c &amp; &quot;, &quot; &amp; LEFT(Student__r.First_Name__c, 1) &amp; &quot;.&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send Out Name</label>
    <type>Text</type>
</CustomField>