force-app/main/default/objects/Send_Out_Detail__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Send Out Sent</fullName>
            </value>
            <value>
                <fullName>1st Interview</fullName>
            </value>
            <value>
                <fullName>Advanced Interview</fullName>
            </value>
            <value>
                <fullName>Offer Made</fullName>
            </value>
            <value>
                <fullName>Placement</fullName>
            </value>
            <value>
                <fullName>No Placement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>