force-app/main/default/objects/Send_Out_Detail__c/fields/Strat_Date__c.field-meta.xml
<CustomField>
    <fullName>Strat_Date__c</fullName>
    <label>Strat Date</label>
    <type>TextArea</type>
</CustomField>