force-app/main/default/objects/Send_Out_Detail__c/fields/Strat_Item__c.field-meta.xml
<CustomField>
    <fullName>Strat_Item__c</fullName>
    <label>Strat Item</label>
    <type>TextArea</type>
</CustomField>