force-app/main/default/objects/Send_Out_Detail__c/fields/Strat_Result__c.field-meta.xml
<CustomField>
    <fullName>Strat_Result__c</fullName>
    <label>Strat Result</label>
    <type>TextArea</type>
</CustomField>