force-app/main/default/objects/Send_Out_Detail__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Send Out Details</relationshipLabel>
    <relationshipName>Send_Out_Details</relationshipName>
    <type>Lookup</type>
</CustomField>