force-app/main/default/objects/Send_Out_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Send_Out_Name__c</columns>
    <columns>Stage__c</columns>
    <columns>Student__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Send Outs</label>
    <sharedTo>
        <role>Corporate_Account_Manager</role>
    </sharedTo>
</ListView>