force-app/main/default/objects/Send_Out_Detail__c/listViews/My_Open_Send_Outs_w_Dates.listView-meta.xml
<ListView>
    <fullName>My_Open_Send_Outs_w_Dates</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Stage__c</columns>
    <columns>Student__c</columns>
    <columns>Date_of_Send_Out_Sent__c</columns>
    <columns>Date_of_1st_Interview__c</columns>
    <columns>Date_of_Advanced_Interview__c</columns>
    <columns>Date_of_Offer_Made__c</columns>
    <columns>Date_of_Placement__c</columns>
    <columns>Date_of_No_Placement__c</columns>
    <columns>Reason_for_Non_Placement__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>notEqual</operation>
        <value>Placement,No Placement</value>
    </filters>
    <label>My Open Send Outs w/ Dates</label>
    <language>en_US</language>
    <sharedTo>
        <role>Corporate_Account_Manager</role>
    </sharedTo>
</ListView>