force-app/main/default/objects/Send_Out_Detail__c/listViews/My_Send_Outs.listView-meta.xml
<ListView>
    <fullName>My_Send_Outs</fullName>
    <columns>Stage__c</columns>
    <columns>Student__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Send Outs</label>
    <language>en_US</language>
    <sharedTo>
        <role>Corporate_Account_Manager</role>
    </sharedTo>
</ListView>